第一次提交

--- a/zyg-parent/pom.xml
+++ b/zyg-parent/pom.xml
@@ -12,6 +12,7 @@
         <module>zyg-core</module>
         <module>zyg-registry</module>
         <module>zyg-getway</module>
+        <module>zyg-item</module>
     </modules>
 
     <parent>
