--- a/zyg-parent/pom.xml
+++ b/zyg-parent/pom.xml
@@ -4,35 +4,25 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>com.zyg</groupId>
     <artifactId>zyg-parent</artifactId>
-    <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <modules>
         <module>zyg-core</module>
         <module>zyg-registry</module>
         <module>zyg-getway</module>
         <module>zyg-item</module>
+        <module>zyg-user</module>
+        <module>zyg-common</module>
     </modules>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.7.RELEASE</version>
-        <relativePath/>
-    </parent>
-
     <properties>
+        <cloud.version>1.0.0-SNAPSHOT</cloud.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-        <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
-        <mybatis.starter.version>1.3.2</mybatis.starter.version>
-        <mapper.starter.version>2.0.2</mapper.starter.version>
-        <druid.starter.version>1.1.9</druid.starter.version>
-        <mysql.version>8.0.17</mysql.version>
-        <pageHelper.starter.version>1.2.3</pageHelper.starter.version>
-        <fastDFS.client.version>1.26.1-RELEASE</fastDFS.client.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <io.springfox.swagger2>2.8.0</io.springfox.swagger2>
         <java-jwt.version>3.8.1</java-jwt.version>
         <alibaba.druid>1.0.31</alibaba.druid>
@@ -41,14 +31,26 @@
         <docker.repostory>192.168.16.84</docker.repostory>
     </properties>
 
-    <build>
-        <plugins>
-            <plugin>
+    <dependencyManagement>
+        <dependencies>
+            <!--支持Spring Boot 2.1.X -->
+            <dependency>
                 <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>2.1.7.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Greenwich.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <profiles>
         <profile>
             <id>dev</id>
