--- a/zyg-parent/zyg-user/pom.xml
+++ b/zyg-parent/zyg-user/pom.xml
@@ -9,7 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>zyg-item</artifactId>
+    <artifactId>zyg-user</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>zyg-user-interface</module>
+        <module>zyg-user-service</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
