--- a/zyg-parent/zyg-user/zyg-user-service/pom.xml
+++ b/zyg-parent/zyg-user/zyg-user-service/pom.xml
@@ -3,7 +3,7 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>zyg-parent</artifactId>
+        <artifactId>zyg-user</artifactId>
         <groupId>com.zyg</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
@@ -11,28 +11,16 @@
 
     <artifactId>zyg-user-service</artifactId>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
     <dependencies>
-        <dependency>
-            <groupId>com.zyg</groupId>
-            <artifactId>zyg-core</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-
         <dependency>
             <groupId>com.zyg</groupId>
             <artifactId>zyg-user-interface</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
-
         <dependency>
             <groupId>com.zyg</groupId>
             <artifactId>zyg-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
-
 </project>
