--- a/zyg-parent/zyg-user/zyg-user-service/src/main/resources/application-fat.yml
+++ b/zyg-parent/zyg-user/zyg-user-service/src/main/resources/application-fat.yml
@@ -4,4 +4,4 @@ apollo:
     enabled: true
     eagerLoad:
       enabled: true
-    namespaces: application
+    namespaces: application,TEST1.zyg-public-config
