--- a/zyg-parent/zyg-item/zyg-item-interface/pom.xml
+++ b/zyg-parent/zyg-item/zyg-item-interface/pom.xml
@@ -3,18 +3,26 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>zyg-parent</artifactId>
+        <artifactId>zyg-item</artifactId>
         <groupId>com.zyg</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>zyg-item</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>zyg-item-interface</module>
-        <module>zyg-item-service</module>
-    </modules>
+    <artifactId>zyg-item-interface</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.zyg</groupId>
+            <artifactId>zyg-core</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zyg</groupId>
+            <artifactId>zyg-common</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
