--- a/zyg-parent/zyg-auth/zyg-auth-service/src/main/docker/dev/Dockerfile
+++ b/zyg-parent/zyg-auth/zyg-auth-service/src/main/docker/dev/Dockerfile
@@ -11,6 +11,9 @@ RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
     && echo "Asia/Shanghai" > /etc/timezone
 #添加jar包到容器中
 ADD target/*jar app.jar
+#复制文件夹
+COPY src/main/docker/prod/rsa.pub /home/rsa/rsa.pub
+COPY src/main/docker/prod/rsa.pri /home/rsa/rsa.pri
 #暴露端口
 EXPOSE $SERVER_PORT
 #定义jvm参数变量
