--- a/zyg-parent/zyg-getway/pom.xml
+++ b/zyg-parent/zyg-getway/pom.xml
@@ -81,6 +81,16 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.zyg</groupId>
+            <artifactId>zyg-auth-common</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.netflix.zuul</groupId>
+            <artifactId>zuul-core</artifactId>
+            <version>1.3.1</version>
+        </dependency>
     </dependencies>
 
     <build>
