--- a/zyg-parent/zyg-auth/zyg-auth-service/pom.xml
+++ b/zyg-parent/zyg-auth/zyg-auth-service/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>zyg-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
